--- a/source/options.html
+++ b/source/options.html
@@ -6,7 +6,7 @@
 <div style="margin-left:auto; margin-right:auto; width:700px; font-family:arial; background:#F2F2F2; padding: 1px 10px 8px 10px; border-top: solid 2px grey; border-bottom: solid 2px grey">
 
 	<p style="font-size:20px; text-align:center; color:#700">
-		Slim Scrollbar <span style="font-size:13px">version 0.8-build5</span><br>
+		Slim Scrollbar <span style="font-size:13px">version 0.8-6</span><br>
 		<a href="http://stylecode.altervista.org" style="font-size:15px">by Damage92</a>
 	</p>
 	<p style="line-height:25px">
