--- a/source/index.html
+++ b/source/index.html
@@ -1,7 +1,8 @@
+<!DOCTYPE HTML>
 <html>
 <head>
-
-<script type="text/javascript">
+<title>Slim Scrollbar</title>
+<script>
 	opera.extension.onconnect = function(event) {
 		var prefs = new Array;
 		
