--- a/source/options.html
+++ b/source/options.html
@@ -29,7 +29,7 @@
 	<a style="float:right" href="javascript:set_default('b_color')">[set to default value]</a><br>
 	<br>
 	<br>
-	<span id="alert">Reload pages for apply changes!</span>
+	<span id="alert">Reload pages to apply changes!</span>
 	</p>
 </div>
 
