added text in options page

--- a/source/options.html
+++ b/source/options.html
@@ -72,6 +72,8 @@ function load() {
 	
 	document.getElementById("cont").innerHTML += "<p class=\"header\">Slim Scrollbar <span style=\"font-size:13px\">"+_("version")+" 0.8-6</span><br><a href=\"http://stylecode.altervista.org\" style=\"font-size:15px\">"+_("by Damage92")+"</a></p>";
 
+	document.getElementById("cont").innerHTML += "<b>"+_("To turn off the default scroll bar go in preferences (ctrl+F12) Advanced > browsing, deactivate \"show scroll bars\".")+"</b><br>";
+
 	insert_section_title("General options:");
 	add_option("alternative");
 	add_option("auto_hide");
