--- a/source/index.html
+++ b/source/index.html
@@ -25,10 +25,11 @@
 	
 	//send prefs on script on prefs change
 	opera.extension.tabs.onfocus = function() {
-		if (widget.preferences.changed == "true") console.log("cambiate!");
-		read_prefs();
-		opera.extension.broadcastMessage(prefs);
-		widget.preferences.changed = "false";
+		if (widget.preferences.changed == "true") {
+			read_prefs();
+			opera.extension.broadcastMessage(prefs);
+			widget.preferences.changed = "false";
+		}
 	}
 	
 	
