--- a/source/options.html
+++ b/source/options.html
@@ -1,7 +1,3 @@
-<!--
-//TODO:
-non si può leggere il valore di default dal config.xml?
--->
 <!DOCTYPE html>
 <html>
 
@@ -72,7 +68,11 @@ function load() {
 	
 	document.getElementById("cont").innerHTML += "<p class=\"header\">Slim Scrollbar <span style=\"font-size:13px\">"+_("version")+" 0.8-6</span><br><a href=\"http://stylecode.altervista.org\" style=\"font-size:15px\">"+_("by Damage92")+"</a></p>";
 
-	document.getElementById("cont").innerHTML += "<b>"+_("To turn off the default scroll bar go in preferences (ctrl+F12) Advanced > browsing, deactivate \"show scroll bars\".")+"</b><br>";
+	if ( (navigator.platform == "Mac") || (navigator.platform == "MacIntel") )
+		document.getElementById("cont").innerHTML += "<b>"+_("To turn off the default scroll bar go in Opera → Preferences → Advanced → Browsing, deactivate “Show scrollbars”.")+"</b><br>";
+	else
+		document.getElementById("cont").innerHTML += "<b>"+_("To turn off the default scroll bar go in Settings → Preferences → Advanced → Browsing, deactivate “Show scrollbars”.")+"</b><br>";
+
 
 	insert_section_title("General options:");
 	add_option("alternative");
@@ -84,6 +84,7 @@ function load() {
 	add_option("color");
 	add_option("b_color");
 	add_option("size");
+	
 	
 }
 
